# colt

./: .gitignore  AUDIT.md  BENCHMARKS.md  CITATION.cff  DESIGN.md  NOTE_CDCL_COMPARISON.md  PHASE4.md  README.md  REVISION_EXPERIMENTS.md  pyproject.toml
colt/: __init__.py  blocks.py  eval.py  lattice.py  losses.py  model.py  solve.py  train.py
configs/: colt6.yaml  colt_multi.yaml
results/: ablate6_A_seed42_hard.json  ablate6_A_seed42_std.json  ablate6_A_seed43_hard.json  ablate6_A_seed43_std.json  ablate6_A_seed44_hard.json  ablate6_A_seed44_std.json  ablate6_B_seed42_hard.json  ablate6_B_seed42_std.json  ablate6_B_seed43_hard.json  ablate6_B_seed43_std.json  ablate6_B_seed44_hard.json  ablate6_B_seed44_std.json  ablate6_C_seed42_hard.json  ablate6_C_seed42_std.json  ablate6_C_seed43_hard.json  ablate6_C_seed43_std.json  ablate6_C_seed44_hard.json  ablate6_C_seed44_std.json  ablate6_D_seed42_hard.json  ablate6_D_seed42_std.json  ablate6_D_seed43_hard.json  ablate6_D_seed43_std.json  ablate6_D_seed44_hard.json  ablate6_D_seed44_std.json  ablate6_E_seed42_hard.json  ablate6_E_seed42_std.json  ablate6_E_seed43_hard.json  ablate6_E_seed43_std.json  ablate6_E_seed44_hard.json  ablate6_E_seed44_std.json  ablate6_F_seed42_hard.json  ablate6_F_seed42_std.json  ablate6_F_seed43_hard.json  ablate6_F_seed43_std.json  ablate6_summary.json  anatomy6hard.json  anatomy6hard_cpu.json  anatomy6hard_cpu_s43.json  anatomy6hard_cpu_s44.json  anatomy6hard_th0.02.json  (+104 more)
results_pod_e3/: anatomy9_aug_s42.json  anatomy9_noaug_s42.json  colt9_noaug_s42_restart_random.json  (+8 more)
(+35 files in other folders)
